<resources>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="btn_link_to_register">Small holder? Sign up now.</string>
    <string name="btn_link_to_forgot_password">Forgot password? Click here! </string>
    <string name="btn_link_to_login">Already registered! Login Me.</string>
    <string name="btn_logout">Logout</string>
    <string name="app_name">MSPO</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_address">Address</string>
    <string name="prompt_phone">Phone number</string>
    <string name="prompt_code">Code</string>
    <string name="btn_register">Sign up</string>
    <string name="title_activity_main">MSPO</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="text_edit">EDIT</string>
    <string name="submit">SUBMIT</string>
    <string name="text_create">CREATE</string>
    <string name="text_change">CHANGE</string>
    <string name="text_ok">OK</string>
    <string name="text_update">UPDATE</string>
    <string name="title_activity_audit_sheet">Audit Sheet</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="action_save">SAVE</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="mobile_number">Mobile number</string>
    <string name="landline_number">Landline number</string>
    <string name="name">Name</string>
    <string name="_0">0</string>
    <string name="newly_assigned">Newly Assigned :</string>
    <string name="ongoing">Ongoing :</string>
    <string name="pending">Pending :</string>
    <string name="completed">Completed :</string>
    <string name="approved">Approved :</string>
    <string name="internal_audits">Internal Audits</string>
    <string name="newlyAssigned">Newly Assigned</string>
    <string name="dash">---</string>
    <string name="land_condition">Land Use</string>
    <string name="district">District</string>
    <string name="farm_address">Farm Address</string>
    <string name="farm_name">Farm Name</string>
    <string name="phone">Phone</string>
    <string name="email_address">Email Address</string>
    <string name="home_address">Home Address</string>
    <string name="language">Language</string>
    <string name="malay">Malay</string>
    <string name="english">English</string>
    <string name="show_all">Show All</string>
    <string name="hint_pending">Pending</string>
    <string name="hint_ongoing">Ongoing</string>
    <string name="not_approved">Not Approved</string>
    <string name="hint_approved">Approved</string>
    <string name="search_audit">Search Audit</string>
    <string name="search">Search</string>
    <string name="apply">Apply</string>
    <string name="reset">Reset</string>
    <string name="complies">Complies</string>
    <string name="major_non_complience">Major Non Complience</string>
    <string name="minor_non_complience">Minor Non Complience</string>
    <string name="not_applicable">Not Applicable</string>
    <string name="audit_observation">Audit Observation</string>
    <string name="indicators">INDICATORS</string>
    <string name="audit_id">Audit Id</string>
    <string name="firm_group">Firm / Group</string>
    <string name="year">Year</string>
    <string name="status">Status</string>
    <string name="category">Category</string>
    <string name="filter">Filter</string>
    <string name="my_audits">My Audits</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="signout">Signout</string>
    <string name="external_audits">External Audits</string>
    <string name="txt_empty">No Audit Listed</string>
    <string name="txt_next">next</string>
    <string name="txt_previous">previous</string>
    <string name="warning_exit_without_save">Exit without saving?</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="temperature_unavailable">Temperature unavailable</string>
    <string name="refresh_to_update_weather">Refresh to update weather</string>
    <string name="refresh_location">Refresh location</string>
    <string name="text_message">Hi, \nThis happens to everyone. Don\'t worry. All you need is to tell us your Username and we will send you a password reset link to your mail id. </string>
    <string name="text_sync">SYNC</string>
    <string name="text_result_sheet">RESULT SHEET</string>
    <string name="text_offline_audit">Offline Audit</string>
    <string name="text_this_is_offline_audit">This is Offline Audit</string>
    <string name="text_audit_duration">Audit Duration</string>
    <string name="text_start_date">Start Date :</string>
    <string name="text_end_date">End Date :</string>
    <string name="text_basic_details">Basic Details</string>
    <string name="smallholder_details">Smallholder Details</string>
    <string name="smallholder_name">Smallholder Name :</string>
    <string name="space_dash">- - -</string>
    <string name="mpob_license_number">MPOB License Number :</string>
    <string name="ic_no">IC No. :</string>
    <string name="grant_area_in_ha">Grant Area In Ha :</string>
    <string name="land_use">Land Use :</string>
    <string name="contact_details">Contact Details</string>
    <string name="small_holder_farm_address">Small Holder Farm Address :</string>
    <string name="text_home_address">Home Address :</string>
    <string name="text_district">District :</string>
    <string name="text_contact_details">Contact Details :</string>
    <string name="auditors">Auditors</string>
    <string name="general_comments">General Comments</string>
    <string name="this_audit_has_been_assigned_to_you">This audit has been assigned to you!!</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="mobile">Mobile</string>
    <string name="landline">Landline</string>
    <string name="qualification">Qualification</string>
    <string name="experience">Experience</string>
    <string name="training_details">Training Details</string>
    <string name="certification_body">Certification Body</string>
    <string name="audit_percentage">Audit Percentage(%)</string>
    <string name="audits_count">Audits Count</string>
    <string name="experiance">Experiance</string>
    <string name="audit_details">Audit Details</string>
    <string name="audit_status">Audit Status :</string>
    <string name="group_name">Group name :</string>
    <string name="head_farmer">Head farmer :</string>
    <string name="no_of_farmers">No of farmers :</string>
    <string name="phone_">Phone :</string>
    <string name="address_">Address :</string>
    <string name="category_">Category :</string>
    <string name="ic_no_">IC No.</string>
    <string name="mpob_license_number_">MPOB License Number</string>
    <string name="grant_area_in_ha_">Grant Area In Ha</string>
    <string name="total_applicable_control_points">Total Applicable Control Points :</string>
    <string name="total_score">Total Score :</string>
    <string name="compliance_percentage">Compliance Percentage :</string>
    <string name="change_password">Change Password</string>
    <string name="change">Change</string>
    <string name="retype_password">Retype Password</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="small_holder_farm_address_">Small Holder Farm Address</string>
    <string name="username">Username</string>
    <string name="new_audit">New Audit</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="status_">Status :</string>
    <string name="principal_summary">Principal Summary</string>
    <string name="username_somedomain_com">username@somedomain.com</string>
    <string name="audit_id_">Audit Id :</string>
    <string name="year_">Year :</string>
    <string name="response_fail">response fail</string>
    <string name="check_internet_connection">Check Internet Connectivity</string>
    <string name="response_null">Auditsheet response null</string>
    <string name="already_submit">Already Submited...!</string>
    <string name="something_wrong">Something Went Wrong</string>
    <string name="sync_first">Sync Audit First</string>
    <string name="audit_not_complete">Audit not Completed</string>
    <string name="canot_change_date">Submited Audit!   Can\'t Change Date</string>
    <string name="audit_accepted">Audit Accepted</string>
    <string name="audit_rejected">Audit Rejected</string>
    <string name="fail_to_update">Failed to Update</string>
    <string name="update_audit">Update Audit</string>
    <string name="select_start_date">Select Start Date</string>
    <string name="select_end_date">Select End Date</string>
    <string name="end_date_mismatch">End Date Mismatch</string>
    <string name="duration_updated">Audit Duration Updated</string>
    <string name="submit_successfully">Submit Successfully</string>
    <string name="update_successfully">Update Successfully</string>
    <string name="sub_audit">Sub Audit</string>
    <string name="save_uccessfully">Save Successfully</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="request_send_successfully">Request Send Successfully</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_country_code">Enter Country Code</string>
    <string name="enter_ph">Enter Phone Number</string>
    <string name="enter_email">Enter Email</string>
    <string name="wait_for_approval">Wait for Approval</string>
    <string name="check_availability">Check Username Availability</string>
    <string name="audit_summary">Audit Summary</string>
    <string-array name="headerList">
        <item>Principle</item>
        <item>Applicable Major Control Points</item>
        <item>Applicable Minor Control Points</item>
        <item>Total Applicable Points For Score Calculation</item>
        <item>Total Score</item>
        <item>Compliance Percentage</item>
        <item>Minor Non Conformity</item>
        <item>Major Non Conformity</item>
        <item>Major Criteria Score</item>
        <item>Major Criteria score percentage</item>
        <item>Minor Criteria Score</item>
        <item>Minor Criteria Score Percentage</item>

    </string-array>
    <string name="enter_Old_Password">Enter Old Password</string>
    <string name="enter_New_Password">Enter New Password</string>
    <string name="retype_New_Password">Retype New Password</string>
    <string name="miss_match_Retype_Password">Miss match Retype Password</string>
    <string name="change_Password_Successfully">Password Changed Successfully</string>
    <string name="single">Single</string>
    <string name="group">Group</string>
    <string name="offline">Offline</string>
    <string name="select_Start_Date">Select Start Date</string>
    <string name="select_End_Date">Select End Date</string>
    <string name="end_Date_Mismatch">End Date Mismatch</string>
</resources>