<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/txt_indicatorHead"
            style="@style/TextAppearance.MSPO.Toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/spacing_normal"
            android:text="@string/indicators" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/txt_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:padding="@dimen/spacing_normal"
            android:text="@string/dash" />

    </LinearLayout>

    <RadioGroup
        android:id="@+id/scoreRadio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/rad_complies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:padding="@dimen/spacing_normal"
            android:text="@string/complies" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/rad_majorNonComplience"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_normal"
            android:text="@string/major_non_complience" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/rad_minorNonComplience"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_normal"
            android:text="@string/minor_non_complience" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/rad_notApplicable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_normal"
            android:text="@string/not_applicable" />

    </RadioGroup>

    <android.support.design.widget.TextInputLayout
        style="@style/Widget.MSPO.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_normal"
        android:hint="@string/audit_observation">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editText_observation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|start"
            android:inputType="textMultiLine"
            android:minLines="3" />
    </android.support.design.widget.TextInputLayout>

</LinearLayout>