<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:padding="@dimen/spacing_normal"
    tools:ignore="MissingPrefix">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/date_title"
        style="@style/TextAppearance.MSPO.Toolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_normal"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/new_audit" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/spacing_normal"
        android:layout_marginRight="@dimen/spacing_normal"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatTextView
            style="@style/TextAppearance.AppCompat.Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_start_date" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/textView_StartDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_normal"
            android:ellipsize="end"
            android:text="@string/dd_mm_yyyy" />


        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/startCalender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_normal"
            android:clickable="true"
            android:ellipsize="end"
            android:focusable="true"
            android:padding="@dimen/spacing_normal"
            android:textStyle="bold"
            app:srcCompat="@drawable/ic_date_range_black_24dp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/spacing_normal"
        android:layout_marginRight="@dimen/spacing_normal"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatTextView
            style="@style/TextAppearance.AppCompat.Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_end_date" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/textView_endDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_normal"
            android:layout_marginLeft="@dimen/spacing_normal"
            android:ellipsize="end"
            android:text="@string/dd_mm_yyyy" />


        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/endCalender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_normal"
            android:layout_marginLeft="@dimen/spacing_normal"
            android:clickable="true"
            android:ellipsize="end"
            android:focusable="true"
            android:padding="@dimen/spacing_normal"
            android:textStyle="bold"
            app:srcCompat="@drawable/ic_date_range_black_24dp" />


    </LinearLayout>


    <android.support.design.button.MaterialButton
        android:id="@+id/btnCreate"
        style="@style/Widget.MSPO.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_normal"
        android:gravity="center"
        android:text="@string/text_create" />


</LinearLayout>