<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_normal"
            android:orientation="vertical">


            <com.mspo.comspo.ui.widgets.CircleImageView
                android:id="@+id/imageViewProfileImage"
                android:layout_width="@dimen/roundPicNormal"
                android:layout_height="@dimen/roundPicNormal"
                android:layout_gravity="center"
                android:layout_margin="@dimen/spacing_normal"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/lock" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/txt_user_name"
                style="@style/TextAppearance.MSPO.Toolbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/spacing_normal"
                android:layout_gravity="center"
                android:ellipsize="end"
                android:singleLine="false"
                android:text="@string/text_message" />

            <android.support.design.widget.TextInputLayout
                style="@style/Widget.MSPO.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_normal">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editText_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top|start"
                    android:hint="@string/username"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.button.MaterialButton
                android:id="@+id/btnOk"
                style="@style/Widget.MSPO.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_normal"
                android:layout_gravity="center"
                android:text="@string/text_ok" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</LinearLayout>